force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <label>Region Assignment</label>
    <nameField>
        <label>Region Assignments</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>