force-app/main/default/objects/Region__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Region Assignments</relationshipLabel>
    <relationshipName>Region_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>