force-app/main/default/objects/Region__c/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Region_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>